--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@vercel/edge-config": "0.4.1",
     "class-variance-authority": "0.7.0",
     "clsx": "2.0.0",
+    "framer-motion": "11.0.3",
     "lucide-react": "0.294.0",
     "next": "14.0.4",
     "postcss": "8.4.32",
